# imx-misc-tools

./: .gitignore  CMakeLists.txt  README.md  bootinfo.c  bootinfo.h  imx-bootinfo.c  imx-otp-tool.c  keystoretool.c  util.c
config-files/: imx-bootinfo.conf.in
otp/: CMakeLists.txt  otp.h  otp_bootcfg.c  otp_bootcfg.h  otp_core.c  otp_internal.h  otp_lock.c  otp_lock.h  otp_macaddr.c  otp_macaddr.h  otp_srk.c  otp_srk.h
